--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="mermaid">
         graph TD;
             %% Điểm bắt đầu
-            A((Người dùng truy cập Shopee)) -->|Nhập tên sản phẩm cần mua vào thanh tìm kiếm| B[Danh sách sản phẩm]
+            A((Người dùng truy cập ứng dụng Shopee)) -->|Nhập tên sản phẩm cần mua vào thanh tìm kiếm| B[Danh sách sản phẩm]
     
             %% Chọn sản phẩm
             B -->|Nhấp vào sản phẩm| C[Xem chi tiết sản phẩm]
